--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
      <h2>minders</h2>
      <h3>geek</h3>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum culpa, totam, error reprehenderit accusantium dolor quos quibusdam hic odit facilis laboriosam architecto necessitatibus eos sunt quisquam reiciendis mollitia rem enim.</p>
 </body>
 </html>
